--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     lendus quo
                 </p>
 
-                <div class="slide hi-slide">
+                <!-- <div class="slide hi-slide">
                     <div class="hi-prev"></div>
                     <div class="hi-next"></div>
                     <ul>
@@ -127,7 +127,7 @@
                         <li><img src="image/whatsapp.png" alt=""></li>
                         <li><img src="image/youtube.png" alt=""></li>
                     </ul>
-                </div>
+                </div> -->
 
             </div>
             
